# SolidWriting

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SolidWriting.py  argv_win_prod.bat  file_version_info.txt  metadata.yml  requirements.txt  solidwriting_cuda_windows.md  version.rc
experimental/: sw_testwindow.py
experimental/cpp/: .gitignore  CMakeLists.txt  ThreadingEngine.cpp  ThreadingEngine.h  cmake_commands_win.md  globals.cpp  globals.h  main.cpp  resources.qrc  sw_about.cpp  sw_about.h  sw_controlinfo.cpp  sw_controlinfo.h  sw_workspace.cpp  sw_workspace.h  sw_workspace.ui
experimental/cpp/sw_modules/: sw_crypto.cpp  sw_crypto.h  sw_globals.cpp  sw_globals.h  sw_threading.cpp  sw_threading.h
modules/: crypto.py  encryption.py  globals.py  threading.py
